# spare

./: Cargo.toml  README.md  build_and_run.sh  cold_start_benchmark.sh  setup.sh
data/: db.db  firecracker  kernel.img  template.rs
icebreaker/: Cargo.toml  build_and_run.sh
icebreaker/src/firepilot/: LICENSE
icebreaker/src/firepilot/src/: lib.rs
icebreaker/src/firepilot/src/builder/: mod.rs
icebreaker/src/firepilot_models/: README.md
icebreaker/src/firepilot_models/docs/: EntropyDevice.md  FullVmConfiguration.md  Logger.md  MachineConfiguration.md  RateLimiter.md  SnapshotLoadParams.md
icebreaker/src/firepilot_models/src/apis/: configuration.rs
icebreaker/src/firepilot_models/src/models/: cpu_template.rs  partial_network_interface.rs  snapshot_load_params.rs  vsock.rs
icebreaker/src/ohsw/src/: endpoints.rs  lib.rs
icebreaker/src/ohsw/src/api/: mod.rs
icebreaker/src/ohsw/src/db/: models.rs
icebreaker/src/ohsw/src/net/: addresses.rs
icebreaker/src/ohsw/src/orchestrator/: global_resources.rs  mod.rs
icebreaker_benchmark/: Cargo.toml
plots/: avg_hops  boxplot.ipynb  generate_heatmaps.sh  latency_histogram  plots.ipynb  tables  weighthed_average.sh
spare/: build_and_run.sh  cold_start_benchmark.sh  db.db
spare/.sqlx/: query-9d7bb323e51853fec24b49f8ec41034aa53cb206bcceb9236a3612b2db328259.json
spare/src/firepilot/src/: executor.rs  machine.rs
spare/src/firepilot/src/builder/: drive.rs  mod.rs
spare/src/firepilot_models/: Cargo.toml
spare/src/firepilot_models/docs/: CpuTemplate.md  DefaultApi.md  Drive.md  NetworkInterface.md  PartialDrive.md  PartialNetworkInterface.md  SnapshotCreateParams.md  Vsock.md
spare/src/firepilot_models/src/apis/: default_api.rs
spare/src/firepilot_models/src/models/: balloon.rs  balloon_stats.rs  balloon_stats_update.rs  balloon_update.rs  boot_source.rs  drive.rs  entropy_device.rs  error.rs  firecracker_version.rs  full_vm_configuration.rs  instance_action_info.rs  instance_info.rs  logger.rs  machine_configuration.rs  memory_backend.rs  metrics.rs  mmds_config.rs  network_interface.rs  partial_drive.rs  rate_limiter.rs  snapshot_create_params.rs  token_bucket.rs  vm.rs
spare/src/firepilot_models/tests/: test-create_vm.rs
spare/src/ohsw/: Cargo.toml  LICENSE
spare/src/ohsw/migrations/: 20240811143218_create_instances.sql
spare/src/ohsw/src/: endpoints.rs  lib.rs  main.rs
spare/src/ohsw/src/api/: invoke.rs  mod.rs  payload.rs  resources.rs
spare/src/ohsw/src/db/: mod.rs  models.rs
spare/src/ohsw/src/execution_environment/: firecracker.rs  mod.rs
spare/src/ohsw/src/net/: addresses.rs  iggy.rs  mod.rs
spare/src/ohsw/src/net/linux/: bridge.rs  mod.rs  tap.rs
spare/src/ohsw/src/orchestrator/: global_resources.rs  local_resources.rs  mod.rs
spare/src/ohsw/src/orchestrator/global/: emergency.rs  geo_distance.rs  identity.rs  mod.rs  simple_cellular.rs  smart_latency.rs
spare/src/ohsw/src/utils/: socket.rs
spare_benchmark/: Cargo.toml
spare_benchmark/src/: dataset.rs  iggy_client.rs  main.rs
