[package]
name = "icebreaker_benchmark"
version = "0.1.0"
edition = "2021"

[dependencies]
iggy = "0.6.31"
clap = { version = "4.5.23", features = ["derive"] }
tokio = { version = "1.42.0", features = ["full"] }
env_logger = "0.11.6"
log = "0.4.22"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.134"
rand = "0.8.5"
reqwest = { version = "0.12.9", features = ["json"] }
chrono = "0.4.39"
