[package]
name = "spare_benchmark"
version = "0.1.0"
edition = "2021"

[dependencies]
iggy = "0.6.203"
clap = { version = "4.5.23", features = ["derive"] }
tokio = { version = "1.44.1", features = ["full"] }
env_logger = "0.11.7"
log = "0.4.26"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
reqwest = { version = "0.12.15", features = ["json", "gzip", "deflate", ] }
chrono = "0.4.40"
longitude = "0.2.1"
csv = "1.1.6"
rand_distr = "0.5.1"
rand = "0.9.0"