[package]
name = "firepilot_models"
version = "1.9.0-de"
authors = ["compute-capsule@amazon.com"]
description = "RESTful public-facing API. The API is accessible through HTTP calls on specific URLs carrying JSON modeled data. The transport medium is a Unix Domain Socket."
license = "Apache 2.0"
edition = "2021"

[dependencies]
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
url = "^2.5"
uuid = { version = "^1.8", features = ["serde", "v4"] }
reqwest = { version = "^0.12", features = ["json", "multipart"] }
tokio = { version = "1.39.2", features = ["full"] }
