[package]
name = "ohsw"
version = "0.1.0"
edition = "2021"
authors = ["Valerio Besozzi <valerio.besozzi@phd.unipi.it>"]

[[bin]]
name = "ohsw"

[dependencies]
sqlx = { version = "0.8.2", features = [ "runtime-tokio", "chrono", "sqlite"] }
actix-web = "4.9.0"
chrono = { version = "0.4.38", features = ["serde"] }
qfilter = "0.2.1"
ipnetwork = "0.20.0"
nix = { version = "0.29.0", features = ["net", "ioctl", "fs"] } 
libc = "0.2.158"
serde = { version = "1.0.210", features = ["derive", ] }
serde_json = "1.0"
log = "0.4.22"
env_logger = "0.11.5"
uuid = { version = "1.10.0", features = ["v4"] }
firepilot = { path = "../firepilot" }
firepilot_models = { path =  "../firepilot_models" }
awc = "3.5.1"
num_cpus = "1.15.0"
iggy = "0.6.30"
clap = { version = "4.2.5", features = ["derive"] }
local-ip-address = "0.6.3"
instant-distance = "0.6.1"
rand = "0.8.5"

