[package]
name = "ohsw"
version = "0.1.0"
edition = "2021"
authors = ["Valerio Besozzi <valerio.besozzi@phd.unipi.it>"]

[[bin]]
name = "ohsw"

[dependencies]
sqlx = { version = "0.8.3", features = [ "runtime-tokio", "chrono", "sqlite"] }
actix-web = "4.10.2"
chrono = { version = "0.4.40", features = ["serde"] }
qfilter = "0.2.3"
ipnetwork = "0.21.1"
nix = { version = "0.29.0", features = ["net", "ioctl", "fs"] } 
libc = "0.2.171"
serde = { version = "1.0.219", features = ["derive", ] }
serde_json = "1.0"
log = "0.4.27"
env_logger = "0.11.7"
uuid = { version = "1.16.0", features = ["v4"] }
firepilot = { path = "../firepilot" }
firepilot_models = { path =  "../firepilot_models" }
awc = "3.6.0"
num_cpus = "1.16.0"
iggy = "0.6.203"
clap = { version = "4.5.34", features = ["derive"] }
local-ip-address = "0.6.3"
instant-distance = "0.6.1"
rand = "0.9.0"
rand_distr = "0.5.1"
longitude = "0.2.1"
dyn-clone = "1.0.19"

